--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <span id="timer-number"></span>
     </div>
     <section class="quiz-content-wrapper">
-        <div class="question-text hide">
-            <p>Example Question Text Here</p>
+        <div id="question-text-wrapper" class="question-text-wrapper hide">
+            <p id="question-text"></p>
         </div>
         
         <div class="quiz-content-buttons">
