--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <script src="script.js" defer></script>
+        <!-- import jQuery to make going over the dom easier   -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <title>Quiz</title>
 </head>
 
@@ -14,10 +16,12 @@
         <span id="timer-number"></span>
     </div>
     <section class="quiz-content-wrapper">
-        <div id="question-text-wrapper" class="question-text-wrapper hide">
-            <p id="question-text"></p>
+        <div id="question-text-wrapper" class="question-text-wrapper">
+            <p id="question-text">Click The start button to take the JS Quiz</p>
         </div>
-        
+        <div id="quiz-content-questions-wrapper" class="quiz-content-questions-wrapper">
+
+        </div>        
         <div class="quiz-content-buttons">
             <button id="start-btn" class="start-btn btn">Start</button>
             <button id="next-btn" class="next-btn btn hide">Next</button>
