select queston from object

--- a/index.html
+++ b/index.html
@@ -15,18 +15,21 @@
     <div class="timer">
         <span id="timer-number"></span>
     </div>
-    <section class="quiz-content-wrapper">
-        <div id="question-text-wrapper" class="question-text-wrapper">
-            <p id="question-text">Click The start button to take the JS Quiz</p>
+   
+    <div id="quiz-container" class="quiz-container">
+        <div id="question-text-container" class=question-text-container>
+            <p id="question-text"></p>
         </div>
-        <div id="quiz-content-questions-wrapper" class="quiz-content-questions-wrapper">
-
-        </div>        
-        <div class="quiz-content-buttons">
-            <button id="start-btn" class="start-btn btn">Start</button>
-            <button id="next-btn" class="next-btn btn hide">Next</button>
+        <div id="question-container" class="question-container">
+            <div id="anwsers" class="anwser-grid anwsers">
+                
+            </div>
         </div>
-    </section>
+        <div class="control-buttons">   
+            <button id="start-btn" class="start-btn">Start</button>
+            <button id="next-btn" class="next-btn hide">Next</button>
+        </div>
+    </div>
 
 </body>
 
