add correct text indication

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     </div>
    
     <div id="quiz-container" class="quiz-container">
+        <div class="correct-incorrect-container" id="correct-incorrect-container">
+            <span id="correct-incorrect-text"></span>
+        </div>
         <div id="question-text-container" class=question-text-container>
             <p id="question-text" class="question-text"></p>
         </div>
