add scores page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <script src="script.js" defer></script>
+        <script src="high-scores.js" defer></script>
         <!-- import jQuery to make going over the dom easier   -->
         <title>Quiz</title>
 </head>
@@ -14,6 +15,9 @@
     <div class="timer">
         <span>Score: </span>
         <span id="timer-number"></span>
+    </div>
+    <div id="high-scores">
+        <a href="high-scores.html">High Scores</a>
     </div>
    
     <div id="quiz-container" class="quiz-container">
